# AdobeBotAnalysis

./: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  pyproject.toml
.claude/: settings.json  settings.local.json
adobe_downloader/: __init__.py  __main__.py  cli.py  state_manager.py
adobe_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: .migration_log.txt  Legend_useful_ids.txt  country_segment_lookup.json  segment_creation_dimensions.yaml
docs/: Adobe_Downloader_Technical_Plan.md  Architecture_Principles.md  Section_16_Orchestration_And_Claude_Code.md  data_migration_guide.md  file_inventory.md
jobs/: casinoorg_seo_homepage_adhoc_botinvestigation.yaml  geo_segment_visits_build_final.py  geo_segment_visits_jun2026.yaml  geo_singapore_sbr_mar_may26.yaml  geo_singapore_sbr_mar_may26_v2.yaml
legacy_js/: .gitignore  BotInvestigationGenerateCountrySegments.js  BotInvestigationRunFileIterateRsids  BotRuleCompareTransformConcat.js  botInvestigationTransformConcat.js  botValidationTransformConcat.js  buildSegmentsFromDimension.js  callFunction.js  createSegmentFromList.js  downloadAdobeTable.js  downloadBotInvestigationData.js  downloadBotInvestigationUnfilteredData.js  downloadBotRuleCompare.js  downloadBotRuleValidationData.js  downloadFinalBotRuleMetrics.js  finalBotRuleMetricsTransformConcat.js  iterateRsidCountriesBotInvestigation.js  iterateRsidsBotInvestigation.js  legendReportSuiteUpdater.js  package-lock.json  package.json  processBotRuleComparison.js  processJSONFiles.js  processJSONFilesSummaryTotalOnly.js  (+8 more)
(+390 files in other folders)
